syntax = "proto3";

import "google/protobuf/empty.proto";
import "ReplyStatusEnum.proto";

option csharp_namespace = "GreeterService";

package greet;

// The greeting service definition.
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloToNobody (google.protobuf.Empty) returns (HelloReply);
}

// Messages
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
  ReplyStatusEnum Status = 2;
}
